This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

09-Aug-2003 (Lars Duening)  (3.3.476)
  - (configure) The configuration script now looks for OpenSSL before
      GnuTLS. However, TLS support using OpenSSL is not implemented yet.

09-Aug-2003 (Lars Duening)  (3.3.475)
  - (main.c, pkg-tls) The x509 key and certfile can now be specifed
      on the commandline with '--tls-key' and '--tls-cert'.

08-Aug-2003 (Lars Duening)  (3.3.474)
  - (pkg-tls.c, comm.c) Corrected compilation errors in the TLS code
      (I didn't have GnuTLS installed before, so I didn't notice).

08-Aug-2003 (Lars Duening)  (3.3.473)
  - (lex.c) Symbol __PTHREADS__ is defined if the driver is compiled
       for pthreads (suggested by Gawain).
  - (configure, pkg-tls) Added TLS support (using GnuTLS) - thanks,
       Gawain!

07-Aug-2003 (Lars Duening)  (3.3.472)
  - (doc/) Corrected a number of typos (thanks, Casey!)
  - (object.c) The efun variable_list() can now return variable values
       as well (thanks, Casey!).

07-Aug-2003 (Lars Duening)  (3.3.471)
  - (configure, pkg-mysql, main.c) Improved the recognition of mySQL when
       there's more than one mySQL installation. Additionally the pkg-mysql
       checks that the mysqlclient library is consistent with the header
       files (reported by Craig Venz).

05-Jul-2003 (Lars Duening)  (3.3.470)
  - (smalloc.c) Reduced the computational overhead of the small block
       defragmentation: since only newly freed blocks offer opportunities
       for defragmentation, only those are checked.
  - (object.c) Saving an object in the old format ('0') still used the
       shared value syntax for strings (reported by Bardioc).

31-Jul-2003 (Lars Duening)  (3.3.469)
  - (smalloc.c) Splitting of a block from a larger free list failed
       to preserve the PREV_BLOCK flag in the returned block, causing